Create dev branch \ Remove audio for simplicitys sake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,13 +64,13 @@ message(STATUS "GLM found = ${GLM_FOUND} , at ${GLM_INCLUDE_DIR}")
 find_package(SDL2 2.0.0 REQUIRED)
 message(STATUS "SDL2 found = ${SDL2_FOUND} , at ${SDL2_INCLUDE_DIR}")
 
-find_package(SDL2Mixer REQUIRED)
-message(STATUS "SDL2 Mixer found = ${SDL2_MIXER_FOUND}, at ${SDL2_MIXER_INCLUDE_DIR}")
+#find_package(SDL2Mixer REQUIRED)
+#message(STATUS "SDL2 Mixer found = ${SDL2_MIXER_FOUND}, at ${SDL2_MIXER_INCLUDE_DIR}")
 
-set(PROJECT_INCLUDES ${GLM_INCLUDE_DIR} ${SDL2_INCLUDE_DIR} ${SDL2_MIXER_INCLUDE_DIR} ${FREETYPE_INCLUDE_DIRS})
+set(PROJECT_INCLUDES ${GLM_INCLUDE_DIR} ${SDL2_INCLUDE_DIR} ${FREETYPE_INCLUDE_DIRS})
 include_directories(${PROJECT_INCLUDES})
 
-set(PROJECT_LIBS ${SDL2_LIBRARY} ${SDL2_MIXER_LIBRARY} ${X11_X11_LIB} ${OPENGL_gl_LIBRARY} ${FREETYPE_LIBRARIES})
+set(PROJECT_LIBS ${SDL2_LIBRARY} ${X11_X11_LIB} ${OPENGL_gl_LIBRARY} ${FREETYPE_LIBRARIES})
 
 add_subdirectory(src)
 
