--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
+# C/C++ files and Craft-specific files
+CMakeCache.txt
+CMakeFiles
+cmake_install.cmake
+env
+log.txt
+*.o
+*.db
+*.exe
+*.dll
+*.pyc
+
 # Blender Cache Files
 *.blend1
 
 build/
+.vscode
+.github
 
+# Script output files
 scripts/*.txt
 scripts/*.png
 scripts/*.PNG
