--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -6,7 +6,7 @@ on:
   push:
     branches: [ "dev" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "dev", "master" ]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -21,8 +21,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: openrndr/setup-opengl@v1.1
-    - run: xvfb-run glxinfo
+
+    - name: Install Dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libglfw3-dev libglm-dev mesa-utils libfreetype6-dev libvulkan-dev libxinerama-dev libxcursor-dev libxi-dev
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
