Troubleshoot GitHub Action issue, update node->v20

--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -20,7 +20,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v3 
+    - using: 'node20'
 
     - name: Install Dependencies
       run: |
