--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.2...3.5)
 
 cmake_policy(SET CMP0058 NEW)
+cmake_policy(SET CMP0072 NEW)
 
 project(maze_builder)
 
