--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install Dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libglfw3-dev libglm-dev mesa-utils libfreetype6-dev libvulkan-dev libxinerama-dev libxcursor-dev libxi-dev
+        sudo apt-get install -y libglfw3-dev libglm-dev mesa-utils libfreetype6-dev libvulkan-dev libxinerama-dev libxcursor-dev libxi-dev libunwind-dev
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
